# ml-laptime

./: .gitignore  README.md  pyproject.toml
ml_laptime/: train_pipeline.ipynb
ml_laptime/notebook/: predict.ipynb  train.ipynb
ml_laptime/src/: __init__.py  backfill.py  fastf1.py  features.py  get_fastf1_data.py  utils.py
