[tool.poetry]
name = "ml-laptime"
version = "0.1.0"
description = ""
authors = ["victorien <victorienmichel3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
ipython = "^8.26.0"
seaborn = "^0.13.2"
fastf1 = "^3.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
